// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 PagerButton disabled 1`] = `
.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,0.3);
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
>
  <svg
    aria-hidden="false"
    className="c1"
    focusable="false"
    viewBox="0 0 1024 1024"
  >
    <path
      d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
    />
  </svg>
</button>
`;

exports[`测试 PagerButton shape circle 1`] = `
.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:active {
  background-color: rgba(0,0,0,0.3);
}

<button
  className="c0"
  onClick={[Function]}
>
  <svg
    aria-hidden="false"
    className="c1"
    focusable="false"
    viewBox="0 0 1024 1024"
  >
    <path
      d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
    />
  </svg>
</button>
`;

exports[`测试 PagerButton transparent 1`] = `
.c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: transparent;
  color: rgba(255,255,255,1);
}

<button
  className="c0"
  onClick={[Function]}
>
  <svg
    aria-hidden="false"
    className="c1"
    focusable="false"
    viewBox="0 0 1024 1024"
  >
    <path
      d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
    />
  </svg>
</button>
`;

exports[`测试 PagerButton 正常情况 1`] = `
Array [
  .c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:active {
  background-color: rgba(0,0,0,0.3);
}

<button
    className="c0"
    onClick={[Function]}
  >
    <svg
      aria-hidden="false"
      className="c1"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M501.725 499.81l260.036-381.385a21.67 21.67 0 00-5.742-30.121L626 3.575a21.67 21.67 0 00-29.796 5.851l-333.93 490.385a21.67 21.67 0 000 24.378l333.93 490.276a21.67 21.67 0 0029.796 5.96l129.476-84.512a21.67 21.67 0 006.284-30.013L501.725 524.514a21.67 21.67 0 010-24.703z"
      />
    </svg>
  </button>,
  .c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 20px;
  height: 32px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:active {
  background-color: rgba(0,0,0,0.3);
}

<button
    className="c0"
    onClick={[Function]}
  >
    <svg
      aria-hidden="false"
      className="c1"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M522.187 499.81L262.15 118.426a21.67 21.67 0 015.959-30.121L398.128 3.792a21.67 21.67 0 0129.796 5.851l333.82 490.168a21.67 21.67 0 010 24.378l-333.929 490.276a21.67 21.67 0 01-29.795 5.96l-129.477-84.512a21.67 21.67 0 01-6.284-30.013l260.036-381.386a21.67 21.67 0 00-.108-24.703z"
      />
    </svg>
  </button>,
  .c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 32px;
  height: 20px;
  border-radius: 2px;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:active {
  background-color: rgba(0,0,0,0.3);
}

<button
    className="c0"
    onClick={[Function]}
  >
    <svg
      aria-hidden="false"
      className="c1"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M524.01 457.323L899.5 713.088a21.333 21.333 0 0029.866-5.973l83.2-127.52a21.333 21.333 0 00-5.845-29.291l-482.71-328.79a21.333 21.333 0 00-24.02 0L17.28 550.295a21.333 21.333 0 00-5.856 29.29l83.2 127.51a21.333 21.333 0 0029.877 5.973L499.99 457.333a21.333 21.333 0 0124.022 0z"
      />
    </svg>
  </button>,
  .c1 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  margin: 0;
  border: none;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font-size: 14px;
  width: 32px;
  height: 20px;
  border-radius: 2px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  background-color: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:active {
  background-color: rgba(0,0,0,0.3);
}

<button
    className="c0"
    onClick={[Function]}
  >
    <svg
      aria-hidden="false"
      className="c1"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M499.99 566.677L124.5 310.912a21.333 21.333 0 00-29.866 5.973l-83.2 127.52a21.333 21.333 0 005.845 29.291l482.71 328.79a21.333 21.333 0 0024.02 0l482.71-328.78a21.333 21.333 0 005.856-29.29l-83.2-127.51a21.333 21.333 0 00-29.877-5.973L524.01 566.667a21.333 21.333 0 01-24.022 0z"
      />
    </svg>
  </button>,
]
`;
